# crypto-portfolio-manager

./: .gitignore  Cargo.toml  README.md  bun.lockb  package.json  pnpm-lock.yaml
dnas/crypto_portfolio/workdir/: dna.yaml
dnas/crypto_portfolio/zomes/coordinator/coins/: Cargo.toml
dnas/crypto_portfolio/zomes/coordinator/portfolio/: Cargo.toml
dnas/crypto_portfolio/zomes/integrity/coins/: Cargo.toml
dnas/crypto_portfolio/zomes/integrity/portfolio/: Cargo.toml
tests/: package.json
tests/src/crypto_portfolio/coins/: coin.test.ts  common.ts
tests/src/crypto_portfolio/ping/: ping.test.ts
tests/src/crypto_portfolio/portfolio/: common.ts  stakeholder.test.ts  stakeholder_profile.test.ts
ui/: README.md  package.json  svelte.config.js
ui/src/: index.test.ts
ui/src/crypto_portfolio/coins/: coin-detail.ts  create-coin.ts  edit-coin.ts  types.ts
ui/src/crypto_portfolio/ping/: types.ts
ui/src/lib/popups/: CreateStakeholderPopup.svelte
ui/src/models/: stakeholder.model.ts
ui/src/routes/: +layout.svelte  +page.svelte  +page.ts
ui/src/routes/portfolios/: +page.server.ts  +page.svelte
ui/src/routes/portfolios/[id]/: +page.server.ts  +page.svelte
ui/src/routes/stakeholders/: +page.server.ts  +page.svelte
ui/src/services/: HolochainClientService.ts
ui/src/services/api-services/: AlternativeApiService.ts  ApiService.ts  CoinGeckoApiService.ts
ui/src/stores/: breadcrumb.store.ts  coins.store.ts  stakeholder-profiles.store.ts
ui/src/utils/: index.ts
ui_scaffold/src/: App.svelte
workdir/: happ.yaml  web-happ.yaml
(+11 files in other folders)
