[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]

[workspace.dependencies]
hdi = "=0.3.6"
hdk = "=0.2.6"
serde = "=1.0.166"

[workspace.dependencies.portfolio]
path = "dnas/crypto_portfolio/zomes/coordinator/portfolio"

[workspace.dependencies.portfolio_integrity]
path = "dnas/crypto_portfolio/zomes/integrity/portfolio"
